# Prism

./: .commitlintrc.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  .versionrc.json  CHANGELOG.md  LICENSE  README.md  index.html  package.json  tmpclaude-4abd-cwd  tsconfig.app.json
.github/workflows/: check.yml  release.yml  test-build.yml
.husky/: pre-commit
docs/: GITFLOW.md  branch-commit-message-standard.md  shadcn-ui.md  tauri.md
scripts/: sync-cargo-version.js
src/: App.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: connection.rs  error.rs  flow.rs  graph.rs  media_type.rs  mod.rs  node.rs  node_type.rs  port.rs  ports.rs
src-tauri/src/events/: mod.rs
src/components/: component-example.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  combobox.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  input.tsx  label.tsx  select.tsx
src/lib/: bindings.ts
